# TS-channel_django-temp

./: .coveragerc  .flake8  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh
base/: models.py  tests.py  urls.py  views.py
base/migrations/: 0001_initial.py
base/static/css/: styles.css
base/templates/: base.html  login.html  register.html
channels/: admin.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
channels/migrations/: 0001_initial.py  0002_useraccount.py  0003_delete_useraccount.py
channels/tamplates/: channels_form.html  channels_list.html
channels/templates/: channels_form.html  channels_list.html  login.html  marketplace_form.html  marketplace_update.html  mkt_list.html  register.html
channels/tests/: conftest.py  test_api.py  test_api_unittest.py  tests.py
logs/: models.py  tests.py
logs/migrations/: 0001_initial.py
nginx/: Dockerfile  servers
setup/: settings.py  urls.py
